# stackamole-xblock

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  AGENTS.md  Changelog.md  HACKING.md  MIGRATION.md  README.md  pyproject.toml  run_tests.py  setup.py  tox.ini
hastexo/: provider.py
hastexo/locale/en/LC_MESSAGES/: django-partial.po
hastexo/public/js/: main.js
hastexo/static/html/: main.html
hastexo/translations/de_DE/LC_MESSAGES/: text.po
hastexo/translations/el/LC_MESSAGES/: text.po
hastexo/translations/en/LC_MESSAGES/: text.po
hastexo/translations/es_419/LC_MESSAGES/: text.po
hastexo/translations/et_EE/LC_MESSAGES/: text.po
requirements/: base.txt  test.txt
stackamole/: __init__.py  admin.py  common.py  models.py  openstack.py  stackamole.py  tasks.py
stackamole/management/commands/: reaper.py  suspender.py
stackamole/migrations/: 0002_stacklog.py  0003_blanks.py  0004_auto_20190715_1053.py  0005_auto_20190811_1555.py  0006_auto_20200107_1332.py  0007_add_delete_by_and_delete_age.py  0008_add_database_defaults_for_stack_key_and_password.py  0009_add_null_true_for_key_and_password.py  0010_add_user_foreign_key.py  0011_allow_null_for_learner.py  0012_add_suspend_by.py  0013_migrate_app_label.py
stackamole/public/css/: main.css
stackamole/public/js/: client.js  main.js
stackamole/static/html/: lab.html  main.html
stackamole_guacamole_client/: asgi.py  consumers.py  settings.py
tests/unit/: test_admin.py  test_commands.py  test_common.py  test_hastexo.py  test_jobs.py  test_models.py  test_openstack.py  test_provider.py  test_stackamole.py  test_tasks.py
(+26 files in other folders)
